successful white generation. in parallel! with improved prompts, gpt4o is able to generate compilable test classes every time with no intervention!